ASoC: codecs: wsa883x: fix PA volume control (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3571,6 +3571,7 @@
 	patches.kernel.org/6.6.16-320-ASoC-qcom-sc8280xp-limit-speaker-volumes.patch
 	patches.kernel.org/6.6.16-321-ASoC-codecs-wcd938x-fix-headphones-volume-cont.patch
 	patches.kernel.org/6.6.16-322-ASoC-codecs-lpass-wsa-macro-fix-compander-volu.patch
+	patches.kernel.org/6.6.16-323-ASoC-codecs-wsa883x-fix-PA-volume-control.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
