--- a/series.conf
+++ b/series.conf
@@ -3528,6 +3528,7 @@
 	patches.kernel.org/6.6.16-277-ipmr-fix-kernel-panic-when-forwarding-mcast-pa.patch
 	patches.kernel.org/6.6.16-278-net-lan966x-Fix-port-configuration-when-using-.patch
 	patches.kernel.org/6.6.16-279-tcp-add-sanity-checks-to-rx-zerocopy.patch
+	patches.kernel.org/6.6.16-280-e1000e-correct-maximum-frequency-adjustment-va.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
