--- a/series.conf
+++ b/series.conf
@@ -3263,6 +3263,7 @@
 	patches.kernel.org/6.6.16-012-x86-mce-Mark-fatal-MCE-s-page-as-poison-to-avo.patch
 	patches.kernel.org/6.6.16-013-perf-core-Fix-narrow-startup-race-when-creatin.patch
 	patches.kernel.org/6.6.16-014-debugobjects-Stop-accessing-objects-after-rele.patch
+	patches.kernel.org/6.6.16-015-regulator-core-Only-increment-use_count-when-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
