scsi: isci: Fix an error code problem in isci_io_request_build() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3510,6 +3510,7 @@
 	patches.kernel.org/6.6.16-259-drm-using-mul_u32_u32-requires-linux-math64.h.patch
 	patches.kernel.org/6.6.16-260-drm-amdkfd-only-flush-mes-process-context-if-m.patch
 	patches.kernel.org/6.6.16-261-riscv-Fix-build-error-on-rv32-XIP.patch
+	patches.kernel.org/6.6.16-262-scsi-isci-Fix-an-error-code-problem-in-isci_io.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
