--- a/series.conf
+++ b/series.conf
@@ -3414,6 +3414,7 @@
 	patches.kernel.org/6.6.16-163-drm-bridge-anx7625-Fix-Set-HPD-irq-detect-wind.patch
 	patches.kernel.org/6.6.16-164-drm-amd-display-Fix-tiled-display-misalignment.patch
 	patches.kernel.org/6.6.16-165-f2fs-fix-write-pointers-on-zoned-device-after-.patch
+	patches.kernel.org/6.6.16-166-ASoC-amd-Add-new-dmi-entries-for-acp5x-platfor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
