ARM: dts: qcom: mdm9615: fix PMIC node labels (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3315,6 +3315,7 @@
 	patches.kernel.org/6.6.16-064-wifi-rt2x00-correct-wrong-BBP-register-in-RxDC.patch
 	patches.kernel.org/6.6.16-065-selftests-bpf-Fix-issues-in-setup_classid_envi.patch
 	patches.kernel.org/6.6.16-066-ARM-dts-qcom-strip-prefix-from-PMIC-files.patch
+	patches.kernel.org/6.6.16-067-ARM-dts-qcom-mdm9615-fix-PMIC-node-labels.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
