arm64: dts: sprd: Add clock reference for pll2 on UMS512 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3398,6 +3398,7 @@
 	patches.kernel.org/6.6.16-147-Bluetooth-L2CAP-Fix-possible-multiple-reject-s.patch
 	patches.kernel.org/6.6.16-148-net-smc-disable-SEID-on-non-s390-archs-where-v.patch
 	patches.kernel.org/6.6.16-149-bridge-cfm-fix-enum-typo-in-br_cc_ccm_tx_parse.patch
+	patches.kernel.org/6.6.16-150-arm64-dts-sprd-Add-clock-reference-for-pll2-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
