=?UTF-8?q?virtio=5Fnet:=20Fix=20"=E2=80=98%d=E2=80=99=20d?= =?UTF-8?q?irective=20writing=20between=201=20and=2011=20bytes=20into=20a?= =?UTF-8?q?=20region=20of=20size=2010"=20warnings?= (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3494,6 +3494,7 @@
 	patches.kernel.org/6.6.16-243-libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.kernel.org/6.6.16-244-drm-amdkfd-Fix-lock-dependency-warning.patch
 	patches.kernel.org/6.6.16-245-drm-amdkfd-Fix-lock-dependency-warning-with-sr.patch
+	patches.kernel.org/6.6.16-246-virtio_net-Fix-d-directive-writing-between-1-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
