drm/amd/display: Only clear symclk otg flag for HDMI (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3454,6 +3454,7 @@
 	patches.kernel.org/6.6.16-203-watchdog-it87_wdt-Keep-WDTCTRL-bit-3-unmodifie.patch
 	patches.kernel.org/6.6.16-204-accel-habanalabs-add-support-for-Gaudi2C-devic.patch
 	patches.kernel.org/6.6.16-205-drm-amd-display-make-flip_timestamp_in_us-a-64.patch
+	patches.kernel.org/6.6.16-206-drm-amd-display-Only-clear-symclk-otg-flag-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
