netfilter: nft_ct: sanitize layer 3 and 4 protocol number in custom expectations (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3542,6 +3542,7 @@
 	patches.kernel.org/6.6.16-291-netfilter-conntrack-correct-window-scaling-wit.patch
 	patches.kernel.org/6.6.16-292-netfilter-nf_tables-restrict-tunnel-object-to-.patch
 	patches.kernel.org/6.6.16-293-netfilter-nf_log-replace-BUG_ON-by-WARN_ON_ONC.patch
+	patches.kernel.org/6.6.16-294-netfilter-nft_ct-sanitize-layer-3-and-4-protoc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
