ipv6: Ensure natural alignment of const ipv6 loopback and router addresses (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3533,6 +3533,7 @@
 	patches.kernel.org/6.6.16-282-ixgbe-Refactor-overtemp-event-handling.patch
 	patches.kernel.org/6.6.16-283-ixgbe-Fix-an-error-handling-path-in-ixgbe_read.patch
 	patches.kernel.org/6.6.16-284-net-dsa-qca8k-fix-illegal-usage-of-GPIO.patch
+	patches.kernel.org/6.6.16-285-ipv6-Ensure-natural-alignment-of-const-ipv6-lo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
