--- a/series.conf
+++ b/series.conf
@@ -3516,6 +3516,7 @@
 	patches.kernel.org/6.6.16-265-scsi-core-Move-scsi_host_busy-out-of-host-lock.patch
 	patches.kernel.org/6.6.16-266-HID-hidraw-fix-a-problem-of-memory-leak-in-hid.patch
 	patches.kernel.org/6.6.16-267-selftests-net-remove-dependency-on-ebpf-tests.patch
+	patches.kernel.org/6.6.16-268-selftests-net-explicitly-wait-for-listener-rea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
