ARM: dts: imx27: Fix sram node (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3360,6 +3360,7 @@
 	patches.kernel.org/6.6.16-109-ARM-dts-rockchip-fix-rk3036-hdmi-ports-node.patch
 	patches.kernel.org/6.6.16-110-ARM-dts-imx25-27-eukrea-Fix-RTC-node-name.patch
 	patches.kernel.org/6.6.16-111-ARM-dts-imx-Use-flash-0-0-pattern.patch
+	patches.kernel.org/6.6.16-112-ARM-dts-imx27-Fix-sram-node.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
