drm/amdgpu: Release 'adev->pm.fw' before return in 'amdgpu_device_need_post()' (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3502,6 +3502,7 @@
 	patches.kernel.org/6.6.16-251-drm-amdgpu-fix-avg-vs-input-power-reporting-on.patch
 	patches.kernel.org/6.6.16-252-drm-amd-powerplay-Fix-kzalloc-parameter-ATOM_T.patch
 	patches.kernel.org/6.6.16-253-drm-amdgpu-Fix-with-right-return-code-EIO-in-a.patch
+	patches.kernel.org/6.6.16-254-drm-amdgpu-Release-adev-pm.fw-before-return-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
