--- a/series.conf
+++ b/series.conf
@@ -3283,6 +3283,7 @@
 	patches.kernel.org/6.6.16-032-crypto-p10-aes-gcm-Avoid-Wstringop-overflow-wa.patch
 	patches.kernel.org/6.6.16-033-pstore-ram-Fix-crash-when-setting-number-of-cp.patch
 	patches.kernel.org/6.6.16-034-erofs-fix-up-compacted-indexes-for-block-size-.patch
+	patches.kernel.org/6.6.16-035-crypto-starfive-Fix-dev_err_probe-return-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
