pds_core: Cancel AQ work on teardown (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3545,6 +3545,7 @@
 	patches.kernel.org/6.6.16-294-netfilter-nft_ct-sanitize-layer-3-and-4-protoc.patch
 	patches.kernel.org/6.6.16-295-net-ipv4-fix-a-memleak-in-ip_setup_cork.patch
 	patches.kernel.org/6.6.16-296-af_unix-fix-lockdep-positive-in-sk_diag_dump_i.patch
+	patches.kernel.org/6.6.16-297-pds_core-Cancel-AQ-work-on-teardown.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
