thermal: core: Fix thermal zone suspend-resume synchronization (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3273,6 +3273,7 @@
 	patches.kernel.org/6.6.16-022-kunit-tool-fix-parsing-of-test-attributes.patch
 	patches.kernel.org/6.6.16-023-PM-devfreq-Synchronize-devfreq_monitor_-start-.patch
 	patches.kernel.org/6.6.16-024-ACPI-APEI-set-memory-failure-flags-as-MF_ACTIO.patch
+	patches.kernel.org/6.6.16-025-thermal-core-Fix-thermal-zone-suspend-resume-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
