media: ddbridge: fix an error code problem in ddb_probe (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3438,6 +3438,7 @@
 	patches.kernel.org/6.6.16-187-drm-exynos-Call-drm_atomic_helper_shutdown-at-.patch
 	patches.kernel.org/6.6.16-188-IB-ipoib-Fix-mcast-list-locking.patch
 	patches.kernel.org/6.6.16-189-media-amphion-remove-mutext-lock-in-condition-.patch
+	patches.kernel.org/6.6.16-190-media-ddbridge-fix-an-error-code-problem-in-dd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
