Bluetooth: hci_sync: fix BR/EDR wakeup bug (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3394,6 +3394,7 @@
 	patches.kernel.org/6.6.16-143-wifi-cfg80211-free-beacon_ies-when-overridden-.patch
 	patches.kernel.org/6.6.16-144-Bluetooth-qca-Set-both-WIDEBAND_SPEECH-and-LE_.patch
 	patches.kernel.org/6.6.16-145-Bluetooth-ISO-Avoid-creating-child-socket-if-P.patch
+	patches.kernel.org/6.6.16-146-Bluetooth-hci_sync-fix-BR-EDR-wakeup-bug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
