--- a/series.conf
+++ b/series.conf
@@ -3411,6 +3411,7 @@
 	patches.kernel.org/6.6.16-160-reiserfs-Avoid-touching-renamed-directory-if-p.patch
 	patches.kernel.org/6.6.16-161-RDMA-IPoIB-Fix-error-code-return-in-ipoib_mcas.patch
 	patches.kernel.org/6.6.16-162-drm-panel-edp-Add-override_edid_mode-quirk-for.patch
+	patches.kernel.org/6.6.16-163-drm-bridge-anx7625-Fix-Set-HPD-irq-detect-wind.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
