--- a/series.conf
+++ b/series.conf
@@ -3495,6 +3495,7 @@
 	patches.kernel.org/6.6.16-244-drm-amdkfd-Fix-lock-dependency-warning.patch
 	patches.kernel.org/6.6.16-245-drm-amdkfd-Fix-lock-dependency-warning-with-sr.patch
 	patches.kernel.org/6.6.16-246-virtio_net-Fix-d-directive-writing-between-1-a.patch
+	patches.kernel.org/6.6.16-247-blk-mq-fix-IO-hang-from-sbitmap-wakeup-race.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
