--- a/series.conf
+++ b/series.conf
@@ -3505,6 +3505,7 @@
 	patches.kernel.org/6.6.16-254-drm-amdgpu-Release-adev-pm.fw-before-return-in.patch
 	patches.kernel.org/6.6.16-255-drm-amdkfd-Fix-node-NULL-check-in-svm_range_ge.patch
 	patches.kernel.org/6.6.16-256-i2c-rk3x-Adjust-mask-value-offset-for-i2c2-on-.patch
+	patches.kernel.org/6.6.16-257-perf-Fix-the-nr_addr_filters-fix.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
