selftests: net: fix available tunnels detection (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3553,6 +3553,7 @@
 	patches.kernel.org/6.6.16-302-pds_core-Rework-teardown-setup-flow-to-be-more.patch
 	patches.kernel.org/6.6.16-303-selftests-net-add-missing-config-for-nftables-.patch
 	patches.kernel.org/6.6.16-304-selftests-net-add-missing-config-for-pmtu.sh-t.patch
+	patches.kernel.org/6.6.16-305-selftests-net-fix-available-tunnels-detection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
