--- a/series.conf
+++ b/series.conf
@@ -3530,6 +3530,7 @@
 	patches.kernel.org/6.6.16-279-tcp-add-sanity-checks-to-rx-zerocopy.patch
 	patches.kernel.org/6.6.16-280-e1000e-correct-maximum-frequency-adjustment-va.patch
 	patches.kernel.org/6.6.16-281-ixgbe-Refactor-returning-internal-error-codes.patch
+	patches.kernel.org/6.6.16-282-ixgbe-Refactor-overtemp-event-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
