--- a/series.conf
+++ b/series.conf
@@ -3287,6 +3287,7 @@
 	patches.kernel.org/6.6.16-036-crypto-octeontx2-Fix-cptvf-driver-cleanup.patch
 	patches.kernel.org/6.6.16-037-erofs-fix-ztailpacking-for-subpage-compressed-.patch
 	patches.kernel.org/6.6.16-038-crypto-stm32-crc32-fix-parsing-list-of-devices.patch
+	patches.kernel.org/6.6.16-039-afs-fix-the-usage-of-read_seqbegin_or_lock-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
