--- a/series.conf
+++ b/series.conf
@@ -3470,6 +3470,7 @@
 	patches.kernel.org/6.6.16-219-um-Fix-naming-clash-between-UML-and-scheduler.patch
 	patches.kernel.org/6.6.16-220-um-Don-t-use-vfprintf-for-os_info.patch
 	patches.kernel.org/6.6.16-221-um-net-Fix-return-type-of-uml_net_start_xmit.patch
+	patches.kernel.org/6.6.16-222-um-time-travel-fix-time-corruption.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
