--- a/series.conf
+++ b/series.conf
@@ -3532,6 +3532,7 @@
 	patches.kernel.org/6.6.16-281-ixgbe-Refactor-returning-internal-error-codes.patch
 	patches.kernel.org/6.6.16-282-ixgbe-Refactor-overtemp-event-handling.patch
 	patches.kernel.org/6.6.16-283-ixgbe-Fix-an-error-handling-path-in-ixgbe_read.patch
+	patches.kernel.org/6.6.16-284-net-dsa-qca8k-fix-illegal-usage-of-GPIO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
