Bluetooth: qca: Set both WIDEBAND_SPEECH and LE_STATES quirks for QCA2066 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3392,6 +3392,7 @@
 	patches.kernel.org/6.6.16-141-libbpf-Fix-NULL-pointer-dereference-in-bpf_obj.patch
 	patches.kernel.org/6.6.16-142-wifi-rtlwifi-rtl8723-be-ae-using-calculate_bit.patch
 	patches.kernel.org/6.6.16-143-wifi-cfg80211-free-beacon_ies-when-overridden-.patch
+	patches.kernel.org/6.6.16-144-Bluetooth-qca-Set-both-WIDEBAND_SPEECH-and-LE_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
