--- a/series.conf
+++ b/series.conf
@@ -3429,6 +3429,7 @@
 	patches.kernel.org/6.6.16-178-media-uvcvideo-Fix-power-line-control-for-Sunp.patch
 	patches.kernel.org/6.6.16-179-media-rkisp1-Drop-IRQF_SHARED.patch
 	patches.kernel.org/6.6.16-180-media-rkisp1-Fix-IRQ-handler-return-values.patch
+	patches.kernel.org/6.6.16-181-media-rkisp1-Store-IRQ-lines.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
