--- a/series.conf
+++ b/series.conf
@@ -3375,6 +3375,7 @@
 	patches.kernel.org/6.6.16-124-ARM-dts-imx23-sansa-Use-preferred-i2c-gpios-pr.patch
 	patches.kernel.org/6.6.16-125-ARM-dts-imx23-28-Fix-the-DMA-controller-node-n.patch
 	patches.kernel.org/6.6.16-126-scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-str.patch
+	patches.kernel.org/6.6.16-127-scsi-lpfc-Move-determination-of-vmid_flag-afte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
