--- a/series.conf
+++ b/series.conf
@@ -3389,6 +3389,7 @@
 	patches.kernel.org/6.6.16-138-arm64-dts-amlogic-fix-format-for-s4-uart-node.patch
 	patches.kernel.org/6.6.16-139-wifi-rtl8xxxu-Add-additional-USB-IDs-for-RTL81.patch
 	patches.kernel.org/6.6.16-140-wifi-rtw89-coex-Fix-wrong-Wi-Fi-role-info-and-.patch
+	patches.kernel.org/6.6.16-141-libbpf-Fix-NULL-pointer-dereference-in-bpf_obj.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
