selftests/bpf: fix RELEASE=1 build for tc_opts (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3308,6 +3308,7 @@
 	patches.kernel.org/6.6.16-057-ext4-avoid-online-resizing-failures-due-to-ove.patch
 	patches.kernel.org/6.6.16-058-wifi-rtw89-fix-timeout-calculation-in-rtw89_ro.patch
 	patches.kernel.org/6.6.16-059-wifi-rt2x00-restart-beacon-queue-when-hardware.patch
+	patches.kernel.org/6.6.16-060-selftests-bpf-fix-RELEASE-1-build-for-tc_opts.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
