scsi: libfc: Don't schedule abort twice (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3339,6 +3339,7 @@
 	patches.kernel.org/6.6.16-088-bpf-Check-rcu_read_lock_trace_held-before-call.patch
 	patches.kernel.org/6.6.16-089-bpf-Set-need_defer-as-false-when-clearing-fd-a.patch
 	patches.kernel.org/6.6.16-090-wifi-ath12k-fix-and-enable-AP-mode-for-WCN7850.patch
+	patches.kernel.org/6.6.16-091-scsi-libfc-Don-t-schedule-abort-twice.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
