net: dsa: mv88e6xxx: Fix mv88e6352_serdes_get_stats error path (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3379,6 +3379,7 @@
 	patches.kernel.org/6.6.16-128-scsi-hisi_sas-Set-.phy_attached-before-notifin.patch
 	patches.kernel.org/6.6.16-129-ice-fix-ICE_AQ_VSI_Q_OPT_RSS_-register-values.patch
 	patches.kernel.org/6.6.16-130-net-atlantic-eliminate-double-free-in-error-ha.patch
+	patches.kernel.org/6.6.16-131-net-dsa-mv88e6xxx-Fix-mv88e6352_serdes_get_sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
