--- a/series.conf
+++ b/series.conf
@@ -3498,6 +3498,7 @@
 	patches.kernel.org/6.6.16-247-blk-mq-fix-IO-hang-from-sbitmap-wakeup-race.patch
 	patches.kernel.org/6.6.16-248-ceph-reinitialize-mds-feature-bit-even-when-se.patch
 	patches.kernel.org/6.6.16-249-ceph-fix-deadlock-or-deadcode-of-misusing-dget.patch
+	patches.kernel.org/6.6.16-250-ceph-fix-invalid-pointer-access-if-get_quota_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
