ARM: dts: imx: Use flash@0,0 pattern (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3359,6 +3359,7 @@
 	patches.kernel.org/6.6.16-108-wifi-ath12k-fix-the-issue-that-the-multicast-b.patch
 	patches.kernel.org/6.6.16-109-ARM-dts-rockchip-fix-rk3036-hdmi-ports-node.patch
 	patches.kernel.org/6.6.16-110-ARM-dts-imx25-27-eukrea-Fix-RTC-node-name.patch
+	patches.kernel.org/6.6.16-111-ARM-dts-imx-Use-flash-0-0-pattern.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
