selftests/nolibc: fix testcase status alignment (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3268,6 +3268,7 @@
 	patches.kernel.org/6.6.16-017-ACPI-video-Add-quirk-for-the-Colorful-X15-AT-2.patch
 	patches.kernel.org/6.6.16-018-PNP-ACPI-fix-fortify-warning.patch
 	patches.kernel.org/6.6.16-019-ACPI-extlog-fix-NULL-pointer-dereference-check.patch
+	patches.kernel.org/6.6.16-020-selftests-nolibc-fix-testcase-status-alignment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
