--- a/series.conf
+++ b/series.conf
@@ -3319,6 +3319,7 @@
 	patches.kernel.org/6.6.16-068-ARM-dts-qcom-msm8660-fix-PMIC-node-labels.patch
 	patches.kernel.org/6.6.16-069-soc-xilinx-Fix-for-call-trace-due-to-the-usage.patch
 	patches.kernel.org/6.6.16-070-soc-xilinx-fix-unhandled-SGI-warning-message.patch
+	patches.kernel.org/6.6.16-071-scsi-lpfc-Fix-possible-file-string-name-overfl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
