--- a/series.conf
+++ b/series.conf
@@ -3277,6 +3277,7 @@
 	patches.kernel.org/6.6.16-026-FS-JFS-UBSAN-array-index-out-of-bounds-in-dbAd.patch
 	patches.kernel.org/6.6.16-027-UBSAN-array-index-out-of-bounds-in-dtSplitRoot.patch
 	patches.kernel.org/6.6.16-028-jfs-fix-slab-out-of-bounds-Read-in-dtSearch.patch
+	patches.kernel.org/6.6.16-029-jfs-fix-array-index-out-of-bounds-in-dbAdjTree.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
