wifi: ath12k: fix the issue that the multicast/broadcast indicator is not read correctly for WCN7850 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3356,6 +3356,7 @@
 	patches.kernel.org/6.6.16-105-wifi-mt76-mt7996-add-PCI-IDs-for-mt7992.patch
 	patches.kernel.org/6.6.16-106-bpf-Set-uattr-batch.count-as-zero-before-batch.patch
 	patches.kernel.org/6.6.16-107-wifi-wfx-fix-possible-NULL-pointer-dereference.patch
+	patches.kernel.org/6.6.16-108-wifi-ath12k-fix-the-issue-that-the-multicast-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
