--- a/series.conf
+++ b/series.conf
@@ -3341,6 +3341,7 @@
 	patches.kernel.org/6.6.16-090-wifi-ath12k-fix-and-enable-AP-mode-for-WCN7850.patch
 	patches.kernel.org/6.6.16-091-scsi-libfc-Don-t-schedule-abort-twice.patch
 	patches.kernel.org/6.6.16-092-scsi-libfc-Fix-up-timeout-error-in-fc_fcp_rec_.patch
+	patches.kernel.org/6.6.16-093-minmax-deduplicate-__unconst_integer_typeof.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
