--- a/series.conf
+++ b/series.conf
@@ -3347,6 +3347,7 @@
 	patches.kernel.org/6.6.16-096-minmax-allow-min-max-clamp-if-the-arguments-ha.patch
 	patches.kernel.org/6.6.16-097-minmax-fix-indentation-of-__cmp_once-and-__cla.patch
 	patches.kernel.org/6.6.16-098-minmax-allow-comparisons-of-int-against-unsign.patch
+	patches.kernel.org/6.6.16-099-minmax-relax-check-to-allow-comparison-between.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
