--- a/series.conf
+++ b/series.conf
@@ -3324,6 +3324,7 @@
 	patches.kernel.org/6.6.16-073-ARM-dts-samsung-s5pv210-fix-camera-unit-addres.patch
 	patches.kernel.org/6.6.16-074-net-phy-micrel-fix-ts_info-value-in-case-of-no.patch
 	patches.kernel.org/6.6.16-075-PCI-Add-no-PM-reset-quirk-for-NVIDIA-Spectrum-.patch
+	patches.kernel.org/6.6.16-076-bonding-return-ENOMEM-instead-of-BUG-in-alb_up.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
