--- a/series.conf
+++ b/series.conf
@@ -3418,6 +3418,7 @@
 	patches.kernel.org/6.6.16-167-drm-amd-display-Fix-MST-PBN-X.Y-value-calculat.patch
 	patches.kernel.org/6.6.16-168-drm-drm_file-fix-use-of-uninitialized-variable.patch
 	patches.kernel.org/6.6.16-169-drm-framebuffer-Fix-use-of-uninitialized-varia.patch
+	patches.kernel.org/6.6.16-170-drm-mipi-dsi-Fix-detach-call-without-attach.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
