erofs: fix ztailpacking for subpage compressed blocks (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3285,6 +3285,7 @@
 	patches.kernel.org/6.6.16-034-erofs-fix-up-compacted-indexes-for-block-size-.patch
 	patches.kernel.org/6.6.16-035-crypto-starfive-Fix-dev_err_probe-return-error.patch
 	patches.kernel.org/6.6.16-036-crypto-octeontx2-Fix-cptvf-driver-cleanup.patch
+	patches.kernel.org/6.6.16-037-erofs-fix-ztailpacking-for-subpage-compressed-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
