perf/core: Fix narrow startup race when creating the perf nr_addr_filters sysfs file (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3261,6 +3261,7 @@
 	patches.kernel.org/6.6.16-010-powerpc-pmd_move_must_withdraw-is-only-needed-.patch
 	patches.kernel.org/6.6.16-011-powerpc-lib-Validate-size-for-vector-operation.patch
 	patches.kernel.org/6.6.16-012-x86-mce-Mark-fatal-MCE-s-page-as-poison-to-avo.patch
+	patches.kernel.org/6.6.16-013-perf-core-Fix-narrow-startup-race-when-creatin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
