scsi: core: Move scsi_host_busy() out of host lock for waking up EH handler (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3513,6 +3513,7 @@
 	patches.kernel.org/6.6.16-262-scsi-isci-Fix-an-error-code-problem-in-isci_io.patch
 	patches.kernel.org/6.6.16-263-kunit-run-test-suites-only-after-module-initia.patch
 	patches.kernel.org/6.6.16-264-regulator-ti-abb-don-t-use-devm_platform_iorem.patch
+	patches.kernel.org/6.6.16-265-scsi-core-Move-scsi_host_busy-out-of-host-lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
