--- a/series.conf
+++ b/series.conf
@@ -3330,6 +3330,7 @@
 	patches.kernel.org/6.6.16-079-scsi-mpi3mr-Add-PCI-checks-where-SAS5116-diver.patch
 	patches.kernel.org/6.6.16-080-scsi-arcmsr-Support-new-PCI-device-IDs-1883-an.patch
 	patches.kernel.org/6.6.16-081-ARM-dts-imx7d-Fix-coresight-funnel-ports.patch
+	patches.kernel.org/6.6.16-082-ARM-dts-imx7s-Fix-lcdif-compatible.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
