--- a/series.conf
+++ b/series.conf
@@ -3266,6 +3266,7 @@
 	patches.kernel.org/6.6.16-015-regulator-core-Only-increment-use_count-when-e.patch
 	patches.kernel.org/6.6.16-016-audit-Send-netlink-ACK-before-setting-connecti.patch
 	patches.kernel.org/6.6.16-017-ACPI-video-Add-quirk-for-the-Colorful-X15-AT-2.patch
+	patches.kernel.org/6.6.16-018-PNP-ACPI-fix-fortify-warning.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
