selftests: net: add missing config for pmtu.sh tests (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3552,6 +3552,7 @@
 	patches.kernel.org/6.6.16-301-pds_core-Clear-BARs-on-reset.patch
 	patches.kernel.org/6.6.16-302-pds_core-Rework-teardown-setup-flow-to-be-more.patch
 	patches.kernel.org/6.6.16-303-selftests-net-add-missing-config-for-nftables-.patch
+	patches.kernel.org/6.6.16-304-selftests-net-add-missing-config-for-pmtu.sh-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
