drm/msm/dpu: Ratelimit framedone timeout msgs (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3445,6 +3445,7 @@
 	patches.kernel.org/6.6.16-194-drm-amdkfd-fix-mes-set-shader-debugger-process.patch
 	patches.kernel.org/6.6.16-195-drm-msm-dpu-enable-writeback-on-SM8350.patch
 	patches.kernel.org/6.6.16-196-drm-msm-dpu-enable-writeback-on-SM8450.patch
+	patches.kernel.org/6.6.16-197-drm-msm-dpu-Ratelimit-framedone-timeout-msgs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
