scsi: mpi3mr: Add support for SAS5116 PCI IDs (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3326,6 +3326,7 @@
 	patches.kernel.org/6.6.16-075-PCI-Add-no-PM-reset-quirk-for-NVIDIA-Spectrum-.patch
 	patches.kernel.org/6.6.16-076-bonding-return-ENOMEM-instead-of-BUG-in-alb_up.patch
 	patches.kernel.org/6.6.16-077-net-usb-ax88179_178a-avoid-two-consecutive-dev.patch
+	patches.kernel.org/6.6.16-078-scsi-mpi3mr-Add-support-for-SAS5116-PCI-IDs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
