selftests: team: Add missing config options (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3557,6 +3557,7 @@
 	patches.kernel.org/6.6.16-306-selftests-net-don-t-access-dev-stdout-in-pmtu..patch
 	patches.kernel.org/6.6.16-307-octeontx2-pf-Remove-xdp-queues-on-program-deta.patch
 	patches.kernel.org/6.6.16-308-net-sysfs-Fix-sys-class-net-iface-path.patch
+	patches.kernel.org/6.6.16-309-selftests-team-Add-missing-config-options.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
