--- a/series.conf
+++ b/series.conf
@@ -3475,6 +3475,7 @@
 	patches.kernel.org/6.6.16-224-riscv-Make-XIP-bootable-again.patch
 	patches.kernel.org/6.6.16-225-xen-gntdev-Fix-the-abuse-of-underlying-struct-.patch
 	patches.kernel.org/6.6.16-226-mfd-ti_am335x_tscadc-Fix-TI-SoC-dependencies.patch
+	patches.kernel.org/6.6.16-227-mailbox-arm_mhuv2-Fix-a-bug-for-mhuv2_sender_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
