ACPI: NUMA: Fix the logic of getting the fake_pxm value (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3269,6 +3269,7 @@
 	patches.kernel.org/6.6.16-018-PNP-ACPI-fix-fortify-warning.patch
 	patches.kernel.org/6.6.16-019-ACPI-extlog-fix-NULL-pointer-dereference-check.patch
 	patches.kernel.org/6.6.16-020-selftests-nolibc-fix-testcase-status-alignment.patch
+	patches.kernel.org/6.6.16-021-ACPI-NUMA-Fix-the-logic-of-getting-the-fake_px.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
