--- a/series.conf
+++ b/series.conf
@@ -3333,6 +3333,7 @@
 	patches.kernel.org/6.6.16-082-ARM-dts-imx7s-Fix-lcdif-compatible.patch
 	patches.kernel.org/6.6.16-083-ARM-dts-imx7s-Fix-nand-controller-size-cells.patch
 	patches.kernel.org/6.6.16-084-bpf-Fix-a-few-selftest-failures-due-to-llvm18-.patch
+	patches.kernel.org/6.6.16-085-wifi-ath9k-Fix-potential-array-index-out-of-bo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
