ionic: bypass firmware cmds when stuck in reset (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3364,6 +3364,7 @@
 	patches.kernel.org/6.6.16-113-ARM-dts-imx1-Fix-sram-node.patch
 	patches.kernel.org/6.6.16-114-net-phy-at803x-fix-passing-the-wrong-reference.patch
 	patches.kernel.org/6.6.16-115-ionic-pass-opcode-to-devcmd_wait.patch
+	patches.kernel.org/6.6.16-116-ionic-bypass-firmware-cmds-when-stuck-in-reset.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
