powerpc/64s: Fix CONFIG_NUMA=n build due to create_section_mapping() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3256,6 +3256,7 @@
 	patches.kernel.org/6.6.16-005-drivers-perf-pmuv3-don-t-expose-SW_INCR-event-.patch
 	patches.kernel.org/6.6.16-006-powerpc-Fix-build-error-due-to-is_valid_bugadd.patch
 	patches.kernel.org/6.6.16-007-powerpc-mm-Fix-build-failures-due-to-arch_rese.patch
+	patches.kernel.org/6.6.16-008-powerpc-64s-Fix-CONFIG_NUMA-n-build-due-to-cre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
