wifi: ath12k: fix and enable AP mode for WCN7850 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3338,6 +3338,7 @@
 	patches.kernel.org/6.6.16-087-wifi-rtw89-fix-misbehavior-of-TX-beacon-in-con.patch
 	patches.kernel.org/6.6.16-088-bpf-Check-rcu_read_lock_trace_held-before-call.patch
 	patches.kernel.org/6.6.16-089-bpf-Set-need_defer-as-false-when-clearing-fd-a.patch
+	patches.kernel.org/6.6.16-090-wifi-ath12k-fix-and-enable-AP-mode-for-WCN7850.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
