minmax: allow min()/max()/clamp() if the arguments have the same signedness (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3344,6 +3344,7 @@
 	patches.kernel.org/6.6.16-093-minmax-deduplicate-__unconst_integer_typeof.patch
 	patches.kernel.org/6.6.16-094-minmax-fix-header-inclusions.patch
 	patches.kernel.org/6.6.16-095-minmax-add-umin-a-b-and-umax-a-b.patch
+	patches.kernel.org/6.6.16-096-minmax-allow-min-max-clamp-if-the-arguments-ha.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
