media: uvcvideo: Fix power line control for SunplusIT camera (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3426,6 +3426,7 @@
 	patches.kernel.org/6.6.16-175-ALSA-hda-intel-dspcfg-add-filters-for-ARL-S-an.patch
 	patches.kernel.org/6.6.16-176-drm-msm-dp-Add-DisplayPort-controller-for-SM86.patch
 	patches.kernel.org/6.6.16-177-media-uvcvideo-Fix-power-line-control-for-a-Ch.patch
+	patches.kernel.org/6.6.16-178-media-uvcvideo-Fix-power-line-control-for-Sunp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
