--- a/series.conf
+++ b/series.conf
@@ -3304,6 +3304,7 @@
 	patches.kernel.org/6.6.16-053-ecryptfs-Reject-casefold-directory-inodes.patch
 	patches.kernel.org/6.6.16-054-ext4-fix-inconsistent-between-segment-fstrim-a.patch
 	patches.kernel.org/6.6.16-055-ext4-unify-the-type-of-flexbg_size-to-unsigned.patch
+	patches.kernel.org/6.6.16-056-ext4-remove-unnecessary-check-from-alloc_flex_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
