selftests: net: add missing config for NF_TARGET_TTL (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3559,6 +3559,7 @@
 	patches.kernel.org/6.6.16-308-net-sysfs-Fix-sys-class-net-iface-path.patch
 	patches.kernel.org/6.6.16-309-selftests-team-Add-missing-config-options.patch
 	patches.kernel.org/6.6.16-310-selftests-bonding-Check-initial-state.patch
+	patches.kernel.org/6.6.16-311-selftests-net-add-missing-config-for-NF_TARGET.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
