--- a/series.conf
+++ b/series.conf
@@ -3335,6 +3335,7 @@
 	patches.kernel.org/6.6.16-084-bpf-Fix-a-few-selftest-failures-due-to-llvm18-.patch
 	patches.kernel.org/6.6.16-085-wifi-ath9k-Fix-potential-array-index-out-of-bo.patch
 	patches.kernel.org/6.6.16-086-wifi-ath11k-fix-race-due-to-setting-ATH11K_FLA.patch
+	patches.kernel.org/6.6.16-087-wifi-rtw89-fix-misbehavior-of-TX-beacon-in-con.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
