--- a/series.conf
+++ b/series.conf
@@ -3327,6 +3327,7 @@
 	patches.kernel.org/6.6.16-076-bonding-return-ENOMEM-instead-of-BUG-in-alb_up.patch
 	patches.kernel.org/6.6.16-077-net-usb-ax88179_178a-avoid-two-consecutive-dev.patch
 	patches.kernel.org/6.6.16-078-scsi-mpi3mr-Add-support-for-SAS5116-PCI-IDs.patch
+	patches.kernel.org/6.6.16-079-scsi-mpi3mr-Add-PCI-checks-where-SAS5116-diver.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
