--- a/series.conf
+++ b/series.conf
@@ -3537,6 +3537,7 @@
 	patches.kernel.org/6.6.16-286-llc-call-sock_orphan-at-release-time.patch
 	patches.kernel.org/6.6.16-287-selftests-net-Add-missing-matchall-classifier.patch
 	patches.kernel.org/6.6.16-288-bridge-mcast-fix-disabled-snooping-after-long-.patch
+	patches.kernel.org/6.6.16-289-devlink-Fix-referring-to-hw_addr-attribute-dur.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
