ARM: dts: imx7s: Fix nand-controller #size-cells (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3331,6 +3331,7 @@
 	patches.kernel.org/6.6.16-080-scsi-arcmsr-Support-new-PCI-device-IDs-1883-an.patch
 	patches.kernel.org/6.6.16-081-ARM-dts-imx7d-Fix-coresight-funnel-ports.patch
 	patches.kernel.org/6.6.16-082-ARM-dts-imx7s-Fix-lcdif-compatible.patch
+	patches.kernel.org/6.6.16-083-ARM-dts-imx7s-Fix-nand-controller-size-cells.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
