bridge: cfm: fix enum typo in br_cc_ccm_tx_parse (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3397,6 +3397,7 @@
 	patches.kernel.org/6.6.16-146-Bluetooth-hci_sync-fix-BR-EDR-wakeup-bug.patch
 	patches.kernel.org/6.6.16-147-Bluetooth-L2CAP-Fix-possible-multiple-reject-s.patch
 	patches.kernel.org/6.6.16-148-net-smc-disable-SEID-on-non-s390-archs-where-v.patch
+	patches.kernel.org/6.6.16-149-bridge-cfm-fix-enum-typo-in-br_cc_ccm_tx_parse.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
