--- a/series.conf
+++ b/series.conf
@@ -3310,6 +3310,7 @@
 	patches.kernel.org/6.6.16-059-wifi-rt2x00-restart-beacon-queue-when-hardware.patch
 	patches.kernel.org/6.6.16-060-selftests-bpf-fix-RELEASE-1-build-for-tc_opts.patch
 	patches.kernel.org/6.6.16-061-selftests-bpf-satisfy-compiler-by-having-expli.patch
+	patches.kernel.org/6.6.16-062-libbpf-Fix-potential-uninitialized-tail-paddin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
