leds: trigger: panic: Don't register panic notifier if creating the trigger failed (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3466,6 +3466,7 @@
 	patches.kernel.org/6.6.16-215-drm-amdgpu-apply-the-RV2-system-aperture-fix-t.patch
 	patches.kernel.org/6.6.16-216-ALSA-hda-conexant-Fix-headset-auto-detect-fail.patch
 	patches.kernel.org/6.6.16-217-pinctrl-baytrail-Fix-types-of-config-value-in-.patch
+	patches.kernel.org/6.6.16-218-leds-trigger-panic-Don-t-register-panic-notifi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
