arm64: dts: sprd: Change UMS512 idle-state nodename to match bindings (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3399,6 +3399,7 @@
 	patches.kernel.org/6.6.16-148-net-smc-disable-SEID-on-non-s390-archs-where-v.patch
 	patches.kernel.org/6.6.16-149-bridge-cfm-fix-enum-typo-in-br_cc_ccm_tx_parse.patch
 	patches.kernel.org/6.6.16-150-arm64-dts-sprd-Add-clock-reference-for-pll2-on.patch
+	patches.kernel.org/6.6.16-151-arm64-dts-sprd-Change-UMS512-idle-state-nodena.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
