hwmon: (hp-wmi-sensors) Fix failure to load on EliteDesk 800 G6 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3433,6 +3433,7 @@
 	patches.kernel.org/6.6.16-182-media-rkisp1-Fix-IRQ-disable-race-issue.patch
 	patches.kernel.org/6.6.16-183-media-rkisp1-resizer-Stop-manual-allocation-of.patch
 	patches.kernel.org/6.6.16-184-hwmon-nct6775-Fix-fan-speed-set-failure-in-aut.patch
+	patches.kernel.org/6.6.16-185-hwmon-hp-wmi-sensors-Fix-failure-to-load-on-El.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
