--- a/series.conf
+++ b/series.conf
@@ -3284,6 +3284,7 @@
 	patches.kernel.org/6.6.16-033-pstore-ram-Fix-crash-when-setting-number-of-cp.patch
 	patches.kernel.org/6.6.16-034-erofs-fix-up-compacted-indexes-for-block-size-.patch
 	patches.kernel.org/6.6.16-035-crypto-starfive-Fix-dev_err_probe-return-error.patch
+	patches.kernel.org/6.6.16-036-crypto-octeontx2-Fix-cptvf-driver-cleanup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
