--- a/series.conf
+++ b/series.conf
@@ -3490,6 +3490,7 @@
 	patches.kernel.org/6.6.16-239-PCI-AER-Decode-Requester-ID-when-no-error-info.patch
 	patches.kernel.org/6.6.16-240-9p-Fix-initialisation-of-netfs_inode-for-9p.patch
 	patches.kernel.org/6.6.16-241-usb-xhci-plat-fix-usb-disconnect-issue-after-s.patch
+	patches.kernel.org/6.6.16-242-misc-lis3lv02d_i2c-Add-missing-setting-of-the-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
