asm-generic: make sparse happy with odd-sized put_unaligned_*() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3250,6 +3250,7 @@
 	patches.kernel.org/6.6.15-331-thermal-trip-Drop-lockdep-assertion-from-therm.patch
 	patches.kernel.org/6.6.15-332-Linux-6.6.15.patch
 	patches.kernel.org/6.6.16-001-Documentation-sphinx-fix-Python-string-escapes.patch
+	patches.kernel.org/6.6.16-002-asm-generic-make-sparse-happy-with-odd-sized-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
