net: mvmdio: Avoid excessive sleeps in polled mode (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3348,6 +3348,7 @@
 	patches.kernel.org/6.6.16-097-minmax-fix-indentation-of-__cmp_once-and-__cla.patch
 	patches.kernel.org/6.6.16-098-minmax-allow-comparisons-of-int-against-unsign.patch
 	patches.kernel.org/6.6.16-099-minmax-relax-check-to-allow-comparison-between.patch
+	patches.kernel.org/6.6.16-100-net-mvmdio-Avoid-excessive-sleeps-in-polled-mo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
