--- a/series.conf
+++ b/series.conf
@@ -3560,6 +3560,7 @@
 	patches.kernel.org/6.6.16-309-selftests-team-Add-missing-config-options.patch
 	patches.kernel.org/6.6.16-310-selftests-bonding-Check-initial-state.patch
 	patches.kernel.org/6.6.16-311-selftests-net-add-missing-config-for-NF_TARGET.patch
+	patches.kernel.org/6.6.16-312-selftests-net-enable-some-more-knobs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
