--- a/series.conf
+++ b/series.conf
@@ -3387,6 +3387,7 @@
 	patches.kernel.org/6.6.16-136-arm64-dts-qcom-Fix-coresight-warnings-in-in-po.patch
 	patches.kernel.org/6.6.16-137-ice-fix-pre-shifted-bit-usage.patch
 	patches.kernel.org/6.6.16-138-arm64-dts-amlogic-fix-format-for-s4-uart-node.patch
+	patches.kernel.org/6.6.16-139-wifi-rtl8xxxu-Add-additional-USB-IDs-for-RTL81.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
