drm/panel-edp: Add override_edid_mode quirk for generic edp (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3410,6 +3410,7 @@
 	patches.kernel.org/6.6.16-159-fast_dput-handle-underflows-gracefully.patch
 	patches.kernel.org/6.6.16-160-reiserfs-Avoid-touching-renamed-directory-if-p.patch
 	patches.kernel.org/6.6.16-161-RDMA-IPoIB-Fix-error-code-return-in-ipoib_mcas.patch
+	patches.kernel.org/6.6.16-162-drm-panel-edp-Add-override_edid_mode-quirk-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
