ALSA: hda/conexant: Fix headset auto detect fail in cx8070 and SN6140 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3464,6 +3464,7 @@
 	patches.kernel.org/6.6.16-213-drm-amdgpu-Drop-fence-check-in-to_amdgpu_amdkf.patch
 	patches.kernel.org/6.6.16-214-drm-amdkfd-Fix-iterator-used-outside-loop-in-k.patch
 	patches.kernel.org/6.6.16-215-drm-amdgpu-apply-the-RV2-system-aperture-fix-t.patch
+	patches.kernel.org/6.6.16-216-ALSA-hda-conexant-Fix-headset-auto-detect-fail.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
