--- a/series.conf
+++ b/series.conf
@@ -3393,6 +3393,7 @@
 	patches.kernel.org/6.6.16-142-wifi-rtlwifi-rtl8723-be-ae-using-calculate_bit.patch
 	patches.kernel.org/6.6.16-143-wifi-cfg80211-free-beacon_ies-when-overridden-.patch
 	patches.kernel.org/6.6.16-144-Bluetooth-qca-Set-both-WIDEBAND_SPEECH-and-LE_.patch
+	patches.kernel.org/6.6.16-145-Bluetooth-ISO-Avoid-creating-child-socket-if-P.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
