scsi: arcmsr: Support new PCI device IDs 1883 and 1886 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3328,6 +3328,7 @@
 	patches.kernel.org/6.6.16-077-net-usb-ax88179_178a-avoid-two-consecutive-dev.patch
 	patches.kernel.org/6.6.16-078-scsi-mpi3mr-Add-support-for-SAS5116-PCI-IDs.patch
 	patches.kernel.org/6.6.16-079-scsi-mpi3mr-Add-PCI-checks-where-SAS5116-diver.patch
+	patches.kernel.org/6.6.16-080-scsi-arcmsr-Support-new-PCI-device-IDs-1883-an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
