--- a/series.conf
+++ b/series.conf
@@ -3292,6 +3292,7 @@
 	patches.kernel.org/6.6.16-041-rxrpc_find_service_conn_rcu-fix-the-usage-of-r.patch
 	patches.kernel.org/6.6.16-042-jfs-fix-array-index-out-of-bounds-in-diNewExt.patch
 	patches.kernel.org/6.6.16-043-s390-boot-always-align-vmalloc-area-on-segment.patch
+	patches.kernel.org/6.6.16-044-arch-consolidate-arch_irq_work_raise-prototype.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
