wifi: rtlwifi: rtl8723{be,ae}: using calculate_bit_shift() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3390,6 +3390,7 @@
 	patches.kernel.org/6.6.16-139-wifi-rtl8xxxu-Add-additional-USB-IDs-for-RTL81.patch
 	patches.kernel.org/6.6.16-140-wifi-rtw89-coex-Fix-wrong-Wi-Fi-role-info-and-.patch
 	patches.kernel.org/6.6.16-141-libbpf-Fix-NULL-pointer-dereference-in-bpf_obj.patch
+	patches.kernel.org/6.6.16-142-wifi-rtlwifi-rtl8723-be-ae-using-calculate_bit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
