--- a/series.conf
+++ b/series.conf
@@ -3290,6 +3290,7 @@
 	patches.kernel.org/6.6.16-039-afs-fix-the-usage-of-read_seqbegin_or_lock-in-.patch
 	patches.kernel.org/6.6.16-040-afs-fix-the-usage-of-read_seqbegin_or_lock-in-.patch
 	patches.kernel.org/6.6.16-041-rxrpc_find_service_conn_rcu-fix-the-usage-of-r.patch
+	patches.kernel.org/6.6.16-042-jfs-fix-array-index-out-of-bounds-in-diNewExt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
