wifi: mt76: mt7996: add PCI IDs for mt7992 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3353,6 +3353,7 @@
 	patches.kernel.org/6.6.16-102-arm64-dts-qcom-sm8450-fix-soundwire-controller.patch
 	patches.kernel.org/6.6.16-103-arm64-dts-qcom-sm8350-Fix-remoteproc-interrupt.patch
 	patches.kernel.org/6.6.16-104-wifi-mt76-connac-fix-EHT-phy-mode-check.patch
+	patches.kernel.org/6.6.16-105-wifi-mt76-mt7996-add-PCI-IDs-for-mt7992.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
