gve: Fix skb truesize underestimation (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3517,6 +3517,7 @@
 	patches.kernel.org/6.6.16-266-HID-hidraw-fix-a-problem-of-memory-leak-in-hid.patch
 	patches.kernel.org/6.6.16-267-selftests-net-remove-dependency-on-ebpf-tests.patch
 	patches.kernel.org/6.6.16-268-selftests-net-explicitly-wait-for-listener-rea.patch
+	patches.kernel.org/6.6.16-269-gve-Fix-skb-truesize-underestimation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
