--- a/series.conf
+++ b/series.conf
@@ -3317,6 +3317,7 @@
 	patches.kernel.org/6.6.16-066-ARM-dts-qcom-strip-prefix-from-PMIC-files.patch
 	patches.kernel.org/6.6.16-067-ARM-dts-qcom-mdm9615-fix-PMIC-node-labels.patch
 	patches.kernel.org/6.6.16-068-ARM-dts-qcom-msm8660-fix-PMIC-node-labels.patch
+	patches.kernel.org/6.6.16-069-soc-xilinx-Fix-for-call-trace-due-to-the-usage.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
