md: Whenassemble the array, consult the superblock of the freshest device (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3381,6 +3381,7 @@
 	patches.kernel.org/6.6.16-130-net-atlantic-eliminate-double-free-in-error-ha.patch
 	patches.kernel.org/6.6.16-131-net-dsa-mv88e6xxx-Fix-mv88e6352_serdes_get_sta.patch
 	patches.kernel.org/6.6.16-132-block-prevent-an-integer-overflow-in-bvec_try_.patch
+	patches.kernel.org/6.6.16-133-md-Whenassemble-the-array-consult-the-superblo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
