--- a/series.conf
+++ b/series.conf
@@ -3423,6 +3423,7 @@
 	patches.kernel.org/6.6.16-172-media-rockchip-rga-fix-swizzling-for-RGB-forma.patch
 	patches.kernel.org/6.6.16-173-PCI-add-INTEL_HDA_ARL-to-pci_ids.h.patch
 	patches.kernel.org/6.6.16-174-ALSA-hda-Intel-add-HDA_ARL-PCI-ID-support.patch
+	patches.kernel.org/6.6.16-175-ALSA-hda-intel-dspcfg-add-filters-for-ARL-S-an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
