--- a/series.conf
+++ b/series.conf
@@ -3366,6 +3366,7 @@
 	patches.kernel.org/6.6.16-115-ionic-pass-opcode-to-devcmd_wait.patch
 	patches.kernel.org/6.6.16-116-ionic-bypass-firmware-cmds-when-stuck-in-reset.patch
 	patches.kernel.org/6.6.16-117-block-rnbd-srv-Check-for-unlikely-string-overf.patch
+	patches.kernel.org/6.6.16-118-arm64-zynqmp-Move-fixed-clock-to-for-kv260.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
