--- a/series.conf
+++ b/series.conf
@@ -3349,6 +3349,7 @@
 	patches.kernel.org/6.6.16-098-minmax-allow-comparisons-of-int-against-unsign.patch
 	patches.kernel.org/6.6.16-099-minmax-relax-check-to-allow-comparison-between.patch
 	patches.kernel.org/6.6.16-100-net-mvmdio-Avoid-excessive-sleeps-in-polled-mo.patch
+	patches.kernel.org/6.6.16-101-arm64-dts-qcom-sm8550-fix-soundwire-controller.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
