drm/amdgpu: fix avg vs input power reporting on smu7 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3499,6 +3499,7 @@
 	patches.kernel.org/6.6.16-248-ceph-reinitialize-mds-feature-bit-even-when-se.patch
 	patches.kernel.org/6.6.16-249-ceph-fix-deadlock-or-deadcode-of-misusing-dget.patch
 	patches.kernel.org/6.6.16-250-ceph-fix-invalid-pointer-access-if-get_quota_r.patch
+	patches.kernel.org/6.6.16-251-drm-amdgpu-fix-avg-vs-input-power-reporting-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
