--- a/series.conf
+++ b/series.conf
@@ -3396,6 +3396,7 @@
 	patches.kernel.org/6.6.16-145-Bluetooth-ISO-Avoid-creating-child-socket-if-P.patch
 	patches.kernel.org/6.6.16-146-Bluetooth-hci_sync-fix-BR-EDR-wakeup-bug.patch
 	patches.kernel.org/6.6.16-147-Bluetooth-L2CAP-Fix-possible-multiple-reject-s.patch
+	patches.kernel.org/6.6.16-148-net-smc-disable-SEID-on-non-s390-archs-where-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
