--- a/series.conf
+++ b/series.conf
@@ -3536,6 +3536,7 @@
 	patches.kernel.org/6.6.16-285-ipv6-Ensure-natural-alignment-of-const-ipv6-lo.patch
 	patches.kernel.org/6.6.16-286-llc-call-sock_orphan-at-release-time.patch
 	patches.kernel.org/6.6.16-287-selftests-net-Add-missing-matchall-classifier.patch
+	patches.kernel.org/6.6.16-288-bridge-mcast-fix-disabled-snooping-after-long-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
