ext4: avoid online resizing failures due to oversized flex bg (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3305,6 +3305,7 @@
 	patches.kernel.org/6.6.16-054-ext4-fix-inconsistent-between-segment-fstrim-a.patch
 	patches.kernel.org/6.6.16-055-ext4-unify-the-type-of-flexbg_size-to-unsigned.patch
 	patches.kernel.org/6.6.16-056-ext4-remove-unnecessary-check-from-alloc_flex_.patch
+	patches.kernel.org/6.6.16-057-ext4-avoid-online-resizing-failures-due-to-ove.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
