--- a/series.conf
+++ b/series.conf
@@ -3323,6 +3323,7 @@
 	patches.kernel.org/6.6.16-072-ARM-dts-samsung-exynos4-fix-camera-unit-addres.patch
 	patches.kernel.org/6.6.16-073-ARM-dts-samsung-s5pv210-fix-camera-unit-addres.patch
 	patches.kernel.org/6.6.16-074-net-phy-micrel-fix-ts_info-value-in-case-of-no.patch
+	patches.kernel.org/6.6.16-075-PCI-Add-no-PM-reset-quirk-for-NVIDIA-Spectrum-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
