--- a/series.conf
+++ b/series.conf
@@ -3299,6 +3299,7 @@
 	patches.kernel.org/6.6.16-048-sysctl-Fix-out-of-bounds-access-for-empty-sysc.patch
 	patches.kernel.org/6.6.16-049-SUNRPC-Fix-a-suspicious-RCU-usage-warning.patch
 	patches.kernel.org/6.6.16-050-ext4-treat-end-of-range-as-exclusive-in-ext4_z.patch
+	patches.kernel.org/6.6.16-051-smb-client-fix-renaming-of-reparse-points.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
