--- a/series.conf
+++ b/series.conf
@@ -3455,6 +3455,7 @@
 	patches.kernel.org/6.6.16-204-accel-habanalabs-add-support-for-Gaudi2C-devic.patch
 	patches.kernel.org/6.6.16-205-drm-amd-display-make-flip_timestamp_in_us-a-64.patch
 	patches.kernel.org/6.6.16-206-drm-amd-display-Only-clear-symclk-otg-flag-for.patch
+	patches.kernel.org/6.6.16-207-clk-imx-clk-imx8qxp-fix-LVDS-bypass-pixel-and-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
