drm/amd/display: For prefetch mode > 0, extend prefetch if possible (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3440,6 +3440,7 @@
 	patches.kernel.org/6.6.16-189-media-amphion-remove-mutext-lock-in-condition-.patch
 	patches.kernel.org/6.6.16-190-media-ddbridge-fix-an-error-code-problem-in-dd.patch
 	patches.kernel.org/6.6.16-191-media-i2c-imx335-Fix-hblank-min-max-values.patch
+	patches.kernel.org/6.6.16-192-drm-amd-display-For-prefetch-mode-0-extend-pre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
