--- a/series.conf
+++ b/series.conf
@@ -3252,6 +3252,7 @@
 	patches.kernel.org/6.6.16-001-Documentation-sphinx-fix-Python-string-escapes.patch
 	patches.kernel.org/6.6.16-002-asm-generic-make-sparse-happy-with-odd-sized-p.patch
 	patches.kernel.org/6.6.16-003-powerpc-mm-Fix-null-pointer-dereference-in-pgt.patch
+	patches.kernel.org/6.6.16-004-arm64-irq-set-the-correct-node-for-VMAP-stack.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
