selftests: net: Add missing matchall classifier (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3535,6 +3535,7 @@
 	patches.kernel.org/6.6.16-284-net-dsa-qca8k-fix-illegal-usage-of-GPIO.patch
 	patches.kernel.org/6.6.16-285-ipv6-Ensure-natural-alignment-of-const-ipv6-lo.patch
 	patches.kernel.org/6.6.16-286-llc-call-sock_orphan-at-release-time.patch
+	patches.kernel.org/6.6.16-287-selftests-net-Add-missing-matchall-classifier.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
