--- a/series.conf
+++ b/series.conf
@@ -3258,6 +3258,7 @@
 	patches.kernel.org/6.6.16-007-powerpc-mm-Fix-build-failures-due-to-arch_rese.patch
 	patches.kernel.org/6.6.16-008-powerpc-64s-Fix-CONFIG_NUMA-n-build-due-to-cre.patch
 	patches.kernel.org/6.6.16-009-x86-boot-Ignore-NMIs-during-very-early-boot.patch
+	patches.kernel.org/6.6.16-010-powerpc-pmd_move_must_withdraw-is-only-needed-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
