--- a/series.conf
+++ b/series.conf
@@ -3374,6 +3374,7 @@
 	patches.kernel.org/6.6.16-123-ARM-dts-imx27-apf27dev-Fix-LED-name.patch
 	patches.kernel.org/6.6.16-124-ARM-dts-imx23-sansa-Use-preferred-i2c-gpios-pr.patch
 	patches.kernel.org/6.6.16-125-ARM-dts-imx23-28-Fix-the-DMA-controller-node-n.patch
+	patches.kernel.org/6.6.16-126-scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-str.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
