--- a/series.conf
+++ b/series.conf
@@ -3424,6 +3424,7 @@
 	patches.kernel.org/6.6.16-173-PCI-add-INTEL_HDA_ARL-to-pci_ids.h.patch
 	patches.kernel.org/6.6.16-174-ALSA-hda-Intel-add-HDA_ARL-PCI-ID-support.patch
 	patches.kernel.org/6.6.16-175-ALSA-hda-intel-dspcfg-add-filters-for-ARL-S-an.patch
+	patches.kernel.org/6.6.16-176-drm-msm-dp-Add-DisplayPort-controller-for-SM86.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
