f2fs: fix to tag gcing flag on page during block migration (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3434,6 +3434,7 @@
 	patches.kernel.org/6.6.16-183-media-rkisp1-resizer-Stop-manual-allocation-of.patch
 	patches.kernel.org/6.6.16-184-hwmon-nct6775-Fix-fan-speed-set-failure-in-aut.patch
 	patches.kernel.org/6.6.16-185-hwmon-hp-wmi-sensors-Fix-failure-to-load-on-El.patch
+	patches.kernel.org/6.6.16-186-f2fs-fix-to-tag-gcing-flag-on-page-during-bloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
