ext4: treat end of range as exclusive in ext4_zero_range() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3298,6 +3298,7 @@
 	patches.kernel.org/6.6.16-047-KVM-s390-fix-setting-of-fpc-register.patch
 	patches.kernel.org/6.6.16-048-sysctl-Fix-out-of-bounds-access-for-empty-sysc.patch
 	patches.kernel.org/6.6.16-049-SUNRPC-Fix-a-suspicious-RCU-usage-warning.patch
+	patches.kernel.org/6.6.16-050-ext4-treat-end-of-range-as-exclusive-in-ext4_z.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
