drm/amdkfd: Fix lock dependency warning with srcu (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3493,6 +3493,7 @@
 	patches.kernel.org/6.6.16-242-misc-lis3lv02d_i2c-Add-missing-setting-of-the-.patch
 	patches.kernel.org/6.6.16-243-libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.kernel.org/6.6.16-244-drm-amdkfd-Fix-lock-dependency-warning.patch
+	patches.kernel.org/6.6.16-245-drm-amdkfd-Fix-lock-dependency-warning-with-sr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
