--- a/series.conf
+++ b/series.conf
@@ -3511,6 +3511,7 @@
 	patches.kernel.org/6.6.16-260-drm-amdkfd-only-flush-mes-process-context-if-m.patch
 	patches.kernel.org/6.6.16-261-riscv-Fix-build-error-on-rv32-XIP.patch
 	patches.kernel.org/6.6.16-262-scsi-isci-Fix-an-error-code-problem-in-isci_io.patch
+	patches.kernel.org/6.6.16-263-kunit-run-test-suites-only-after-module-initia.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
