um: Fix naming clash between UML and scheduler (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3467,6 +3467,7 @@
 	patches.kernel.org/6.6.16-216-ALSA-hda-conexant-Fix-headset-auto-detect-fail.patch
 	patches.kernel.org/6.6.16-217-pinctrl-baytrail-Fix-types-of-config-value-in-.patch
 	patches.kernel.org/6.6.16-218-leds-trigger-panic-Don-t-register-panic-notifi.patch
+	patches.kernel.org/6.6.16-219-um-Fix-naming-clash-between-UML-and-scheduler.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
