--- a/series.conf
+++ b/series.conf
@@ -3382,6 +3382,7 @@
 	patches.kernel.org/6.6.16-131-net-dsa-mv88e6xxx-Fix-mv88e6352_serdes_get_sta.patch
 	patches.kernel.org/6.6.16-132-block-prevent-an-integer-overflow-in-bvec_try_.patch
 	patches.kernel.org/6.6.16-133-md-Whenassemble-the-array-consult-the-superblo.patch
+	patches.kernel.org/6.6.16-134-arm64-dts-qcom-msm8996-Fix-in-ports-is-a-requi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
