SUNRPC: Fix a suspicious RCU usage warning (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3297,6 +3297,7 @@
 	patches.kernel.org/6.6.16-046-s390-ptrace-handle-setting-of-fpc-register-cor.patch
 	patches.kernel.org/6.6.16-047-KVM-s390-fix-setting-of-fpc-register.patch
 	patches.kernel.org/6.6.16-048-sysctl-Fix-out-of-bounds-access-for-empty-sysc.patch
+	patches.kernel.org/6.6.16-049-SUNRPC-Fix-a-suspicious-RCU-usage-warning.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
