--- a/series.conf
+++ b/series.conf
@@ -3384,6 +3384,7 @@
 	patches.kernel.org/6.6.16-133-md-Whenassemble-the-array-consult-the-superblo.patch
 	patches.kernel.org/6.6.16-134-arm64-dts-qcom-msm8996-Fix-in-ports-is-a-requi.patch
 	patches.kernel.org/6.6.16-135-arm64-dts-qcom-msm8998-Fix-out-ports-is-a-requ.patch
+	patches.kernel.org/6.6.16-136-arm64-dts-qcom-Fix-coresight-warnings-in-in-po.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
