minmax: fix header inclusions (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3342,6 +3342,7 @@
 	patches.kernel.org/6.6.16-091-scsi-libfc-Don-t-schedule-abort-twice.patch
 	patches.kernel.org/6.6.16-092-scsi-libfc-Fix-up-timeout-error-in-fc_fcp_rec_.patch
 	patches.kernel.org/6.6.16-093-minmax-deduplicate-__unconst_integer_typeof.patch
+	patches.kernel.org/6.6.16-094-minmax-fix-header-inclusions.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
