LoongArch/smp: Call rcutree_report_cpu_starting() at tlb_init() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3565,6 +3565,7 @@
 	patches.kernel.org/6.6.16-314-mm-kmsan-fix-infinite-recursion-due-to-RCU-cri.patch
 	patches.kernel.org/6.6.16-315-Revert-drm-amd-display-Disable-PSR-SU-on-Parad.patch
 	patches.kernel.org/6.6.16-316-drm-msm-dsi-Enable-runtime-PM.patch
+	patches.kernel.org/6.6.16-317-LoongArch-smp-Call-rcutree_report_cpu_starting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
