drm/amd/display: Fix tiled display misalignment (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3412,6 +3412,7 @@
 	patches.kernel.org/6.6.16-161-RDMA-IPoIB-Fix-error-code-return-in-ipoib_mcas.patch
 	patches.kernel.org/6.6.16-162-drm-panel-edp-Add-override_edid_mode-quirk-for.patch
 	patches.kernel.org/6.6.16-163-drm-bridge-anx7625-Fix-Set-HPD-irq-detect-wind.patch
+	patches.kernel.org/6.6.16-164-drm-amd-display-Fix-tiled-display-misalignment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
