--- a/series.conf
+++ b/series.conf
@@ -3371,6 +3371,7 @@
 	patches.kernel.org/6.6.16-120-selftests-bpf-fix-compiler-warnings-in-RELEASE.patch
 	patches.kernel.org/6.6.16-121-ARM-dts-imx25-Fix-the-iim-compatible-string.patch
 	patches.kernel.org/6.6.16-122-ARM-dts-imx25-27-Pass-timing0.patch
+	patches.kernel.org/6.6.16-123-ARM-dts-imx27-apf27dev-Fix-LED-name.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
