--- a/series.conf
+++ b/series.conf
@@ -3527,6 +3527,7 @@
 	patches.kernel.org/6.6.16-276-net-dsa-mt7530-fix-10M-100M-speed-on-MT7988-sw.patch
 	patches.kernel.org/6.6.16-277-ipmr-fix-kernel-panic-when-forwarding-mcast-pa.patch
 	patches.kernel.org/6.6.16-278-net-lan966x-Fix-port-configuration-when-using-.patch
+	patches.kernel.org/6.6.16-279-tcp-add-sanity-checks-to-rx-zerocopy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
