selftests/bpf: satisfy compiler by having explicit return in btf test (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3309,6 +3309,7 @@
 	patches.kernel.org/6.6.16-058-wifi-rtw89-fix-timeout-calculation-in-rtw89_ro.patch
 	patches.kernel.org/6.6.16-059-wifi-rt2x00-restart-beacon-queue-when-hardware.patch
 	patches.kernel.org/6.6.16-060-selftests-bpf-fix-RELEASE-1-build-for-tc_opts.patch
+	patches.kernel.org/6.6.16-061-selftests-bpf-satisfy-compiler-by-having-expli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
