powerpc/mm: Fix build failures due to arch_reserved_kernel_pages() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3255,6 +3255,7 @@
 	patches.kernel.org/6.6.16-004-arm64-irq-set-the-correct-node-for-VMAP-stack.patch
 	patches.kernel.org/6.6.16-005-drivers-perf-pmuv3-don-t-expose-SW_INCR-event-.patch
 	patches.kernel.org/6.6.16-006-powerpc-Fix-build-error-due-to-is_valid_bugadd.patch
+	patches.kernel.org/6.6.16-007-powerpc-mm-Fix-build-failures-due-to-arch_rese.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
