--- a/series.conf
+++ b/series.conf
@@ -3550,6 +3550,7 @@
 	patches.kernel.org/6.6.16-299-pds_core-implement-pci-reset-handlers.patch
 	patches.kernel.org/6.6.16-300-pds_core-Prevent-race-issues-involving-the-adm.patch
 	patches.kernel.org/6.6.16-301-pds_core-Clear-BARs-on-reset.patch
+	patches.kernel.org/6.6.16-302-pds_core-Rework-teardown-setup-flow-to-be-more.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
