--- a/series.conf
+++ b/series.conf
@@ -3526,6 +3526,7 @@
 	patches.kernel.org/6.6.16-275-ip6_tunnel-make-sure-to-pull-inner-header-in-_.patch
 	patches.kernel.org/6.6.16-276-net-dsa-mt7530-fix-10M-100M-speed-on-MT7988-sw.patch
 	patches.kernel.org/6.6.16-277-ipmr-fix-kernel-panic-when-forwarding-mcast-pa.patch
+	patches.kernel.org/6.6.16-278-net-lan966x-Fix-port-configuration-when-using-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
