--- a/series.conf
+++ b/series.conf
@@ -3321,6 +3321,7 @@
 	patches.kernel.org/6.6.16-070-soc-xilinx-fix-unhandled-SGI-warning-message.patch
 	patches.kernel.org/6.6.16-071-scsi-lpfc-Fix-possible-file-string-name-overfl.patch
 	patches.kernel.org/6.6.16-072-ARM-dts-samsung-exynos4-fix-camera-unit-addres.patch
+	patches.kernel.org/6.6.16-073-ARM-dts-samsung-s5pv210-fix-camera-unit-addres.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
