selftests: net: give more time for GRO aggregation (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3522,6 +3522,7 @@
 	patches.kernel.org/6.6.16-271-net-phy-mediatek-ge-soc-sync-driver-with-Media.patch
 	patches.kernel.org/6.6.16-272-selftests-net-add-missing-config-for-big-tcp-t.patch
 	patches.kernel.org/6.6.16-273-selftests-net-add-missing-required-classifier.patch
+	patches.kernel.org/6.6.16-274-selftests-net-give-more-time-for-GRO-aggregati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
