--- a/series.conf
+++ b/series.conf
@@ -3439,6 +3439,7 @@
 	patches.kernel.org/6.6.16-188-IB-ipoib-Fix-mcast-list-locking.patch
 	patches.kernel.org/6.6.16-189-media-amphion-remove-mutext-lock-in-condition-.patch
 	patches.kernel.org/6.6.16-190-media-ddbridge-fix-an-error-code-problem-in-dd.patch
+	patches.kernel.org/6.6.16-191-media-i2c-imx335-Fix-hblank-min-max-values.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
