--- a/series.conf
+++ b/series.conf
@@ -3400,6 +3400,7 @@
 	patches.kernel.org/6.6.16-149-bridge-cfm-fix-enum-typo-in-br_cc_ccm_tx_parse.patch
 	patches.kernel.org/6.6.16-150-arm64-dts-sprd-Add-clock-reference-for-pll2-on.patch
 	patches.kernel.org/6.6.16-151-arm64-dts-sprd-Change-UMS512-idle-state-nodena.patch
+	patches.kernel.org/6.6.16-152-i40e-Fix-VF-disable-behavior-to-block-all-traf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
