wifi: rtw89: coex: Fix wrong Wi-Fi role info and FDDT parameter members (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3388,6 +3388,7 @@
 	patches.kernel.org/6.6.16-137-ice-fix-pre-shifted-bit-usage.patch
 	patches.kernel.org/6.6.16-138-arm64-dts-amlogic-fix-format-for-s4-uart-node.patch
 	patches.kernel.org/6.6.16-139-wifi-rtl8xxxu-Add-additional-USB-IDs-for-RTL81.patch
+	patches.kernel.org/6.6.16-140-wifi-rtw89-coex-Fix-wrong-Wi-Fi-role-info-and-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
