--- a/series.conf
+++ b/series.conf
@@ -3329,6 +3329,7 @@
 	patches.kernel.org/6.6.16-078-scsi-mpi3mr-Add-support-for-SAS5116-PCI-IDs.patch
 	patches.kernel.org/6.6.16-079-scsi-mpi3mr-Add-PCI-checks-where-SAS5116-diver.patch
 	patches.kernel.org/6.6.16-080-scsi-arcmsr-Support-new-PCI-device-IDs-1883-an.patch
+	patches.kernel.org/6.6.16-081-ARM-dts-imx7d-Fix-coresight-funnel-ports.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
